CORS. Token. JWT

--- a/src/Castor/wwwroot/web.config
+++ b/src/Castor/wwwroot/web.config
@@ -4,6 +4,15 @@
     <handlers>
       <add name="httpPlatformHandler" path="*" verb="*" modules="httpPlatformHandler" resourceType="Unspecified"/>
     </handlers>
+<httpProtocol>
+<customHeaders>
+<!--<add name="Access-Control-Allow-Origin" value="*"/>
+<add name="Access-Control-Allow-Headers" value="Accept, Origin, Content-Type"/>
+<add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS"/>-->
+</customHeaders>
+</httpProtocol>
+
     <httpPlatform processPath="%DNX_PATH%" arguments="%DNX_ARGS%" stdoutLogEnabled="false" startupTimeLimit="3600"/>
   </system.webServer>
+
 </configuration>
