--- a/src/Castor/Properties/launchSettings.json
+++ b/src/Castor/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:1700/",
+      "applicationUrl": "http://127.0.0.1:1929/",
       "sslPort": 0
     }
   },
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/post",
+      "launchUrl": "api/values",
       "environmentVariables": {
         "Hosting:Environment": "Development"
       }
